feat(java): добавил поддержку MultipleAssignmentStatement